# esp-cam-playground

./: .gitignore  Cargo.toml  build.rs  sdkconfig.defaults
.cargo/: config.toml
src/: espcam.rs  main.rs  wifi.rs  wifi_conf.rs
