[package]
name = "esp-cam-playground"
version = "0.1.0"
authors = ["jaysonamati <jaysonamati@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# default = ["std", "embassy", "esp-idf-svc/native"]
default = []

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
# embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4.28", default-features = false }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = {version = "0.28.1"}
esp-idf-hal = {version = "0.45.2", features = ["rmt-legacy"]}
esp-idf-sys = {version =  "0.36.1"}
heapless = {version = "0.8.0"}
rgb = {version= "0.8.29"}
anyhow = "=1.0.71"
toml-cfg = "0.2.0"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "components/esp32-camera"
bindings_header = "components/bindings.h"
bindings_module = "camera"

[build-dependencies]
embuild = "0.33.1"
toml-cfg = "0.2.0"
